# dwm-windows

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  README.md  build.cmd  cspell.config.yaml  dwm-windows.sln  dwm-windows.vcxproj  dwm-windows.vcxproj.filters  taskfile.yaml
.github/config/: dwm.dict
.github/workflows/: ci.yml  codeql.yml
src/: bstack.c  config.h  dwm-win32.c  dwm-win32.h  fibonacci.c  gaplessgrid.c  grid.c  win32_utf8.c  win32_utf8.h
src/mods/: client.c  client.h  display.c  display.h  dwm.c  dwm.h  eventemitter.c  eventemitter.h  hotkey.c  hotkey.h
